# knowledge-base-search-engine

./: .gitignore  README.md  nixpacks.toml  pyproject.toml
backend/: main.py  rag_engine.py  requirements.txt
frontend/: streamlit_app.py
