[project]
name = "knowledge-base-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==0.4.18",
    "fastapi==0.104.1",
    "groq>=0.7.0",
    "huggingface-hub>=0.20.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "sentence-transformers>=2.6.0",
    "streamlit==1.28.1",
    "uvicorn[standard]==0.24.0",
    "xlrd>=2.0.2",
]
