[project]
name = "knowledge-base-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb==0.4.18",
    "fastapi==0.115.0",
    "groq>=0.11.0",
    "httpx==0.27.2",
    "huggingface-hub>=0.20.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic==2.9.1",
    "pydantic-core==2.23.3",
    "pydantic-settings==2.1.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.9",
    "requests==2.32.3",
    "sentence-transformers==2.3.1",
    "streamlit==1.28.1",
    "uvicorn[standard]==0.30.6",
    "xlrd>=2.0.2",
]
